--- a/index.html
+++ b/index.html
@@ -188,7 +188,19 @@ footer{
     <nav class="nav">
       <a href="#about">About</a>
       <a href="#gallery">Galeri</a>
-      <a class="btn btn-primary" href="https://wa.me/6282111827798">WhatsApp</a>
+      <a class="btn btn-primary"
+   href="https://docs.google.com/forms/d/e/1FAIpQLSc1JyC-PvP0J13kGJ3--x-R8D_iJgvGHwBVEZvVSpM476MPNw/viewform"
+   target="_blank">
+  Booking Grooming
+</a>
+
+<br><br>
+
+<a href="https://wa.me/6282111827798"
+   style="color:#555;font-weight:600;font-size:14px">
+  Konsultasi via WhatsApp
+</a>
+
     </nav>
   </div>
 </header>
