--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@ section{padding:72px 0}
 a{text-decoration:none;color:inherit}
 
 /* HEADER */
-header{
-  border-bottom:1px solid #eee;
-}
+header{border-bottom:1px solid #eee}
 .header{
   display:flex;
   justify-content:space-between;
@@ -86,9 +84,7 @@ header{
 }
 
 /* ABOUT */
-.about{
-  background:var(--soft);
-}
+.about{background:var(--soft)}
 .about-grid{
   display:grid;
   grid-template-columns:1fr 1fr;
@@ -100,9 +96,6 @@ header{
   padding:28px;
   border-radius:var(--radius);
   box-shadow:var(--shadow);
-}
-.about-card h3{
-  margin-top:0;
 }
 .about img{
   width:100%;
@@ -155,9 +148,7 @@ footer{
     grid-template-columns:1fr;
     text-align:center;
   }
-  .hero p{
-    margin:auto;
-  }
+  .hero p{margin:auto}
   .about-grid{
     grid-template-columns:1fr;
     text-align:center;
@@ -167,12 +158,8 @@ footer{
   }
 }
 @media(max-width:520px){
-  .hero h1{
-    font-size:30px;
-  }
-  .gallery{
-    grid-template-columns:1fr;
-  }
+  .hero h1{font-size:30px}
+  .gallery{grid-template-columns:1fr}
 }
 </style>
 </head>
@@ -189,18 +176,10 @@ footer{
       <a href="#about">About</a>
       <a href="#gallery">Galeri</a>
       <a class="btn btn-primary"
-   href="https://docs.google.com/forms/d/e/1FAIpQLSc1JyC-PvP0J13kGJ3--x-R8D_iJgvGHwBVEZvVSpM476MPNw/viewform"
-   target="_blank">
-  Booking Grooming
-</a>
-
-<br><br>
-
-<a href="https://wa.me/6282111827798"
-   style="color:#555;font-weight:600;font-size:14px">
-  Konsultasi via WhatsApp
-</a>
-
+         href="https://docs.google.com/forms/d/e/1FAIpQLSc1JyC-PvP0J13kGJ3--x-R8D_iJgvGHwBVEZvVSpM476MPNw/viewform"
+         target="_blank">
+        Booking
+      </a>
     </nav>
   </div>
 </header>
@@ -217,9 +196,16 @@ footer{
       Central Cat’s fokus pada perawatan kucing dengan pendekatan lembut,
       alat steril, dan groomer berpengalaman.
     </p>
-    <a class="btn btn-primary" href="https://wa.me/6282111827798">
-      Booking Sekarang
+
+    <a class="btn btn-primary"
+       href="https://docs.google.com/forms/d/e/1FAIpQLSc1JyC-PvP0J13kGJ3--x-R8D_iJgvGHwBVEZvVSpM476MPNw/viewform"
+       target="_blank">
+      Booking Grooming
     </a>
+
+    <div style="margin-top:14px;font-size:14px;color:#666">
+      Atau <a href="https://wa.me/6282111827798">konsultasi via WhatsApp</a>
+    </div>
   </div>
 
   <img src="assets%20maskot/hero-maskot_transparent.png" alt="Central Cat’s Grooming">
@@ -246,9 +232,9 @@ footer{
   </div>
 
   <div class="gallery">
-    <img src="assets%20toko/Petshop%20Kami.jpg">
-    <img src="assets%20grooming/groom-orange-before.png">
-    <img src="assets%20toko/Produk%20Lengkap.jpg">
+    <img src="assets%20toko/Petshop%20Kami.jpg" alt="Petshop Central Cat’s">
+    <img src="assets%20grooming/groom-orange-before.png" alt="Grooming Kucing">
+    <img src="assets%20toko/Produk%20Lengkap.jpg" alt="Produk Petshop">
   </div>
 </section>
 
@@ -271,7 +257,7 @@ footer{
     </div>
     <div>
       <strong>0821-1182-7798</strong><br>
-      <small style="color:var(--muted)">WhatsApp Booking</small>
+      <small style="color:var(--muted)">WhatsApp Konsultasi</small>
     </div>
   </div>
 </footer>
