--- a/index.html
+++ b/index.html
@@ -161,6 +161,44 @@ footer{
   .hero h1{font-size:30px}
   .gallery{grid-template-columns:1fr}
 }
+
+/* ===== FOOTER TAMBAHAN ===== */
+.footer{
+  display:grid;
+  grid-template-columns:repeat(3,1fr);
+  gap:24px;
+}
+
+.footer-col small{
+  color:var(--muted);
+  line-height:1.6;
+}
+
+.footer-col a{
+  color:var(--muted);
+  text-decoration:none;
+  font-weight:500;
+}
+
+.footer-col a:hover{
+  color:var(--primary);
+}
+
+.footer-bottom{
+  margin-top:32px;
+  padding-top:16px;
+  border-top:1px solid #eee;
+  text-align:center;
+  color:var(--muted);
+  font-size:13px;
+}
+
+@media(max-width:900px){
+  .footer{
+    grid-template-columns:1fr;
+    text-align:center;
+  }
+}
 </style>
 </head>
 
