--- a/index.html
+++ b/index.html
@@ -198,6 +198,11 @@ footer{
     grid-template-columns:1fr;
     text-align:center;
   }
+.brand-tagline{
+  font-size:12px;
+  color:var(--muted);
+  display:block;
+  margin-top:2px;
 }
 </style>
 </head>
@@ -207,9 +212,12 @@ footer{
 <header>
   <div class="container header">
     <div class="brand">
-      <img src="assets%20logo/logo.png" alt="Central Cat’s">
-      <strong>Central Cat’s</strong>
-    </div>
+  <img src="assets%20logo/logo.png" alt="Central Cat’s">
+  <div>
+    <strong>Central Cat’s</strong><br>
+    <small class="brand-tagline">Yang berkualitas ada di sini</small>
+  </div>
+</div>
     <nav class="nav">
       <a href="#about">About</a>
       <a href="#gallery">Galeri</a>
