--- a/index.html
+++ b/index.html
@@ -198,6 +198,21 @@ footer{
     grid-template-columns:1fr;
     text-align:center;
   }
+  .brand{
+  display:flex;
+  align-items:center;
+  gap:12px;
+}
+
+.brand div{
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+}
+
+.brand strong{
+  line-height:1.2;
+}
 .brand-tagline{
   font-size:12px;
   color:var(--muted);
