--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ footer{
       <span style="color:var(--primary)">Tenang, Aman, dan Higienis</span>
     </h1>
     <p>
-      Central Cat’s menyediakan petshop untuk berbagai kebutuhan hewan peliharaan,
+      Central Cat’s menyediakan petshop untuk berbagai kebutuhan hewan peliharaan di Tangerang,
       dengan layanan grooming yang difokuskan khusus untuk kucing oleh groomer berpengalaman.
     </p>
 
@@ -247,7 +247,8 @@ footer{
       <p>
         Central Cat’s adalah petshop yang melayani berbagai kebutuhan hewan peliharaan,
         dengan layanan grooming yang difokuskan khusus untuk kucing.
-        Kami mengutamakan kenyamanan anabul, hasil rapi, serta pelayanan yang jujur dan bertanggung jawab.
+        Kami mengutamakan kenyamanan anabul, hasil rapi, serta pelayanan yang jujur dan bertanggung jawab,
+dengan proses grooming yang aman dan pendekatan lembut khusus untuk kucing.
       </p>
     </div>
 
@@ -262,17 +263,21 @@ footer{
   </div>
 
   <div class="gallery">
-    <img src="assets%20toko/Petshop%20Kami.jpg" alt="Petshop Central Cat’s">
-    <img src="assets%20grooming/groom-orange-before.png" alt="Grooming Kucing Central Cat’s">
-    <img src="assets%20toko/Produk%20Lengkap.jpg" alt="Produk Petshop Central Cat’s">
+    <img src="assets%20toko/Petshop%20Kami.jpg"
+     alt="Petshop Central Cat’s Tangerang untuk berbagai kebutuhan hewan peliharaan">
+
+<img src="assets%20grooming/groom-orange-before.png"
+     alt="Proses grooming kucing di Central Cat’s Tangerang">
+
+<img src="assets%20toko/Produk%20Lengkap.jpg"
+     alt="Produk lengkap petshop Central Cat’s untuk hewan peliharaan">
   </div>
 </section>
 
 <section class="branch-cta">
   <h2>Melayani Berbagai Area</h2>
   <p>
-    Central Cat’s terus berkembang dengan membuka cabang di berbagai lokasi.
-    Silakan pilih cabang terdekat untuk informasi detail dan reservasi.
+    Central Cat’s terus berkembang dengan membuka cabang di berbagai area untuk menjangkau lebih banyak pelanggan.
   </p>
   <a class="btn btn-primary" href="cabang.html">Lihat Cabang</a>
 </section>
