--- a/index.html
+++ b/index.html
@@ -204,11 +204,6 @@ footer{
     <nav class="nav">
       <a href="#about">Tentang</a>
       <a href="#gallery">Galeri</a>
-      <a class="btn btn-primary"
-         href="https://docs.google.com/forms/d/e/1FAIpQLSc1JyC-PvP0J13kGJ3--x-R8D_iJgvGHwBVEZvVSpM476MPNw/viewform"
-         target="_blank">
-        Booking
-      </a>
     </nav>
   </div>
 </header>
@@ -229,7 +224,7 @@ footer{
     <a class="btn btn-primary"
        href="https://docs.google.com/forms/d/e/1FAIpQLSc1JyC-PvP0J13kGJ3--x-R8D_iJgvGHwBVEZvVSpM476MPNw/viewform"
        target="_blank">
-      Booking Grooming
+      Booking Grooming Kucing
     </a>
 
     <div style="margin-top:14px;font-size:14px;color:#666">
@@ -308,7 +303,7 @@ dengan proses grooming yang aman dan pendekatan lembut khusus untuk kucing.
       <strong>Kontak</strong><br>
       <small>
         <a href="https://wa.me/6282111827798">WhatsApp</a><br>
-        <a href="https://www.instagram.com/central.catgrooming" target="_blank">Instagram</a>
+        <a href="https://www.instagram.com/centralcat_official" target="_blank">Instagram</a>
       </small>
     </div>
 
