--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@ header{border-bottom:1px solid #eee}
 }
 .gallery img{
   width:100%;
-  height:220px;
-  object-fit:cover;
+  aspect-ratio: 3 / 4;
+  object-fit: cover;
   border-radius:12px;
 }
 
