--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@ header{border-bottom:1px solid #eee}
 }
 .brand strong{line-height:1.2}
 .brand-tagline{
+  display:block;
+  margin-top:2px;
   font-size:12px;
   color:var(--muted);
 }
@@ -197,7 +199,7 @@ footer{
     <div class="brand">
       <img src="assets%20logo/logo.png" alt="Central Cat’s">
       <div>
-        <strong>Central Cat’s</strong><br>
+        <strong>Central Cat’s</strong>
         <small class="brand-tagline">Yang berkualitas ada di sini</small>
       </div>
     </div>
