--- a/index.html
+++ b/index.html
@@ -258,17 +258,27 @@ dengan proses grooming yang aman dan pendekatan lembut khusus untuk kucing.
     <h2>Galeri</h2>
     <p style="color:var(--muted)">Beberapa hasil grooming dan aktivitas petshop kami</p>
   </div>
+<div class="gallery">
 
-  <div class="gallery">
+  <figure class="gallery-item">
     <img src="assets%20toko/Petshop%20Kami.jpg"
-     alt="Petshop Central Cat’s Tangerang untuk berbagai kebutuhan hewan peliharaan">
+         alt="Tampak depan petshop Central Cat’s Tangerang">
+    <figcaption>Tampak depan petshop Central Cat’s</figcaption>
+  </figure>
 
-<img src="assets%20grooming/groom-orange-before.png"
-     alt="Proses grooming kucing di Central Cat’s Tangerang">
+  <figure class="gallery-item">
+    <img src="assets%20grooming/groom-orange-before.png"
+         alt="Before after grooming kucing di Central Cat’s Tangerang">
+    <figcaption>Hasil grooming kucing sebelum & sesudah</figcaption>
+  </figure>
 
-<img src="assets%20toko/Produk%20Lengkap.jpg"
-     alt="Produk lengkap petshop Central Cat’s untuk hewan peliharaan">
-  </div>
+  <figure class="gallery-item">
+    <img src="assets%20toko/Produk%20Lengkap.jpg"
+         alt="Rak produk lengkap petshop Central Cat’s Tangerang">
+    <figcaption>Produk petshop lengkap untuk berbagai hewan</figcaption>
+  </figure>
+
+</div>
 </section>
 
 <section class="branch-cta">
