--- a/index.html
+++ b/index.html
@@ -126,6 +126,16 @@ header{border-bottom:1px solid #eee}
   object-fit: cover;
   border-radius:12px;
 }
+.gallery-item{
+  margin:0;
+}
+
+.gallery-item figcaption{
+  margin-top:8px;
+  font-size:14px;
+  color:var(--muted);
+  text-align:center;
+}
 
 /* CABANG CTA */
 .branch-cta{
