--- a/index.html
+++ b/index.html
@@ -109,6 +109,12 @@ header{border-bottom:1px solid #eee}
   width:100%;
   max-width:360px;
 }
+/* GALLERY TITLE */
+.gallery-title{
+  text-align:center;
+  margin:0 auto 40px;
+  max-width:700px;
+}
 
 .gallery{
   display:grid;
