--- a/index.html
+++ b/index.html
@@ -70,25 +70,51 @@ header{border-bottom:1px solid #eee}
   color:#fff;
 }
 
-/* HERO */
+/* ======================
+   HERO SECTION (FINAL)
+   ====================== */
 .hero{
   display:grid;
   grid-template-columns:1fr 420px;
   gap:48px;
   align-items:center;
 }
+
 .hero h1{
   font-size:40px;
   line-height:1.15;
-  margin:0;
+  margin:0 0 18px;
 }
+
 .hero p{
   color:var(--muted);
   max-width:560px;
+  margin:0 0 24px;
 }
+
 .hero img{
   width:100%;
   border-radius:var(--radius);
+}
+
+/* HERO RESPONSIVE */
+@media(max-width:900px){
+  .hero{
+    grid-template-columns:1fr;
+    gap:32px;
+    text-align:center;
+  }
+
+  .hero p{
+    margin-left:auto;
+    margin-right:auto;
+  }
+}
+
+@media(max-width:520px){
+  .hero h1{
+    font-size:30px;
+  }
 }
 
 /* ABOUT */
@@ -149,6 +175,9 @@ header{border-bottom:1px solid #eee}
 
 /* RESPONSIVE */
 @media(max-width:900px){
+ .hero{
+    gap:32px;
+  } 
   .gallery{
     grid-template-columns:1fr 1fr;
     gap:20px;
