--- a/index.html
+++ b/index.html
@@ -117,24 +117,75 @@ header{border-bottom:1px solid #eee}
   }
 }
 
-/* ABOUT */
-.about{background:var(--soft)}
+/* ======================
+   ABOUT SECTION (FINAL)
+   ====================== */
+.about{
+  background:linear-gradient(
+    180deg,
+    #ffffff 0%,
+    #fafafa 100%
+  );
+}
+
 .about-grid{
   display:grid;
-  grid-template-columns:1fr 1fr;
-  gap:48px;
+  grid-template-columns:1.1fr 0.9fr;
+  gap:56px;
   align-items:center;
 }
+
+/* CARD */
 .about-card{
   background:#fff;
-  padding:28px;
-  border-radius:var(--radius);
-  box-shadow:var(--shadow);
+  padding:36px 40px;
+  border-radius:20px;
+  box-shadow:
+    0 12px 40px rgba(0,0,0,.06);
 }
+
+.about-card h2{
+  margin:0 0 18px;
+  font-size:26px;
+  letter-spacing:-.3px;
+}
+
+.about-card p{
+  max-width:520px;
+  margin:0;
+  color:#333;
+  line-height:1.75;
+}
+
+/* MASKOT */
 .about img{
   width:100%;
   max-width:360px;
+  margin-left:auto;
+  filter:drop-shadow(0 18px 28px rgba(0,0,0,.15));
 }
+
+/* RESPONSIVE */
+@media(max-width:900px){
+  .about-grid{
+    grid-template-columns:1fr;
+    gap:32px;
+    text-align:center;
+  }
+
+  .about-card{
+    margin:0 auto;
+  }
+
+  .about-card p{
+    margin:0 auto;
+  }
+
+  .about img{
+    margin:0 auto;
+  }
+}
+
 /* GALLERY TITLE */
 .gallery-title{
   text-align:center;
