--- a/index.html
+++ b/index.html
@@ -48,13 +48,19 @@ header{border-bottom:1px solid #eee}
   height:44px;
   border-radius:10px;
 }
-.brand strong{line-height:1.2}
+.brand strong{
+  display:block;
+  line-height:1.15;
+}
+
 .brand-tagline{
   display:block;
-  margin-top:2px;
+  margin-top:0;
   font-size:12px;
+  line-height:1.2;
   color:var(--muted);
 }
+
 .nav a{
   margin-left:16px;
   font-weight:600;
