--- a/index.html
+++ b/index.html
@@ -428,6 +428,21 @@ footer{
   .hero h1{font-size:30px}
   .gallery{grid-template-columns:1fr}
 }
+@media(max-width:520px){
+  .hero{
+    padding-top:48px;
+    padding-bottom:48px;
+  }
+
+  .hero h1{
+    margin-bottom:14px;
+  }
+
+  .hero p{
+    margin-bottom:20px;
+  }
+}
+  
 </style>
 </head>
 
